--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -23,6 +23,29 @@
             <h1>WELCOME TO<br>PASAR MALAM NFT</h1>
         </center>
     </div>
+    <br /><br />
+    <div>
+        <table class="kotak">
+            <tr>
+                <th>
+                    No.
+                </th>
+                <th>
+                    List of NFT
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    1
+                </td>
+                <td>
+                    <a href="https://opensea.io/collection/black-future-collection-long-neckie-adira-by-nyla"
+                        id="nft">Black
+                        Future Collection: Long Neckie Adira by Nyla Hayes</a>
+                </td>
+            </tr>
+        </table>
+    </div>
 
 
 </body>
