--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -41,7 +41,8 @@
                 <td>
                     <a href="https://opensea.io/collection/black-future-collection-long-neckie-adira-by-nyla"
                         id="nft">Black
-                        Future Collection: Long Neckie Adira by Nyla Hayes</a>
+                        Future Collection: Long Neckie Adira by Nyla Hayes
+                    </a>
                 </td>
             </tr>
         </table>
