user page by aiffa

--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -40,8 +40,8 @@
                 </td>
                 <td>
                     <a href="https://opensea.io/collection/black-future-collection-long-neckie-adira-by-nyla"
-                        id="nft">Black
-                        Future Collection: Long Neckie Adira by Nyla Hayes
+                        id="nft">
+                        Black Future Collection: Long Neckie Adira by Nyla Hayes
                     </a>
                 </td>
             </tr>
