revert dummy nft

--- a/pages/userPage.html
+++ b/pages/userPage.html
@@ -48,16 +48,6 @@
         <div class="grid-item item" style="margin-left: 30px;"><a href="itemPage.html"><input type="button" class="button" value="View"></a></div>
         <div class="grid-item item" style="margin-right: 30px;"><a href=""><input type="button" class="button" value="Buy"></a></div>
       </div>
-      <div class="grid-container">
-        <div class="grid-item item1"><img src="https://picsum.photos/200/300" /></div>
-        <div class="grid-item item" style="margin-left: 30px;"><a href="itemPage.html"><input type="button" class="button" value="View"></a></div>
-        <div class="grid-item item" style="margin-right: 30px;"><a href=""><input type="button" class="button" value="Buy"></a></div>
-      </div>
-      <div class="grid-container">
-        <div class="grid-item item1"><img src="https://picsum.photos/200/300" /></div>
-        <div class="grid-item item" style="margin-left: 30px;"><a href="itemPage.html"><input type="button" class="button" value="View"></a></div>
-        <div class="grid-item item" style="margin-right: 30px;"><a href=""><input type="button" class="button" value="Buy"></a></div>
-      </div>
     </div>
 
   </div>
@@ -79,10 +69,54 @@
           alert("No applicant found")
         }
       }))?.result
-
     console.log(list_nft)
     for (const nft of list_nft) {
+      const div_grid_container = document.createElement('div')
 
+      const img = document.createElement('img')
+      const div_img = document.createElement('div')
+      img.src = nft?.token_uri
+      img.style.width = '200px'
+      img.style.height = '200px'
+      img.style.objectFit = 'cover'
+      div_img.appendChild(img)
+      div_img.classList.add('grid-item')
+      div_img.classList.add('item1')
+
+      const a_view = document.createElement('a')
+      const input_view = document.createElement('input')
+      const div_view = document.createElement('div')
+      a_view.setAttribute('href', "itemPage.html?token_address=" + nft?.token_address)
+      input_view.setAttribute('type', "button")
+      input_view.setAttribute('value', "View")
+      input_view.textContent = "View"
+      input_view.classList.add('button')
+      a_view.appendChild(input_view)
+      div_view.appendChild(a_view)
+      div_view.classList.add('grid-item')
+      div_view.classList.add('item')
+      div_view.style.marginLeft = '30px'
+
+      const a_buy = document.createElement('a')
+      const input_buy = document.createElement('input')
+      const div_buy = document.createElement('div')
+      a_buy.setAttribute('href', "itemPage.html?token_address=" + nft?.token_address)
+      input_buy.setAttribute('type', "button")
+      input_buy.setAttribute('value', "Buy")
+      input_buy.textContent = "Buy"
+      input_buy.classList.add('button')
+      a_buy.appendChild(input_buy)
+      div_buy.appendChild(a_buy)
+      div_buy.classList.add('grid-item')
+      div_buy.classList.add('item')
+      div_buy.style.marginRight = '30px'
+
+      div_grid_container.appendChild(div_img)
+      div_grid_container.appendChild(div_view)
+      div_grid_container.appendChild(div_buy)
+      div_grid_container.classList.add('grid-container')
+
+      nft_list.appendChild(div_grid_container)
     }
   }
   getListNft()
