token_id correction

--- a/pages/userPage.html
+++ b/pages/userPage.html
@@ -86,7 +86,7 @@
       const a_view = document.createElement('a')
       const input_view = document.createElement('input')
       const div_view = document.createElement('div')
-      a_view.setAttribute('href', "itemPage.html?token_address=" + nft?.token_address)
+      a_view.setAttribute('href', "itemPage.html?token_address=" + nft?.token_address + "&token_id=" + nft?.token_id)
       input_view.setAttribute('type', "button")
       input_view.setAttribute('value', "View")
       input_view.textContent = "View"
