--- a/pages/itemPage.html
+++ b/pages/itemPage.html
@@ -2,74 +2,106 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/home.css" />
-    <link rel="stylesheet" href="../css/item.css" />
-    <title>Pasar Malam NFT</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="../css/home.css" />
+  <link rel="stylesheet" href="../css/item.css" />
+  <title>Pasar Malam NFT</title>
 </head>
 
 <body>
-    <nav>
-        <div class="heading">
-            <h4>Pasar Malam NFT</h4>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Connect Wallet</a></li>
-        </ul>
-    </nav>
-    <div>
-        <img src="https://picsum.photos/200/300" alt="" id="photo" />
-        <br>
-        <center>
-            <h3>Long Neckie Adira: Silver 120 Anniversary Edition</h3>
-        </center>
+  <nav>
+    <div class="heading">
+      <h4>Pasar Malam NFT</h4>
     </div>
-    <br><br>
-    <div style="margin-bottom: 10rem;">
-        <table>
-            <tr>
-                <th>
-                    Description
-                </th>
-                <th>
-                    Details
-                </th>
-            </tr>
-            <tr>
-                <td>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the industry's standard
-                    dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                    to make a type specimen
-                    book. It has survived not only five centuries, but also the leap into electronic typesetting,
-                    remaining essentially
-                    unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-                    Ipsum passages, and more
-                    recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-                    Ipsum.
-                </td>
-                <td>
-                    <center>
-                        <div style="display: inline-flex; align-items: baseline;">
-                            <img src="../images/ethereum.png" id="eth" />
-                            <p style="font-size: 60px;">
-                                0.12
-                            </p>
-                            <p style="font-size: 20px;">
-                                ($196.99)
-                            </p>
-                        </div>
-                        <br><br>
-                        <input type="button" class="button" value="BUY NOW">
-                    </center>
-                </td>
-            </tr>
-        </table>
+    <ul class="nav-links">
+      <li><a href="index.html">Connect Wallet</a></li>
+    </ul>
+  </nav>
+  <div>
+    <img alt="" src="" id="nft-img" />
+    <br>
+    <center>
+      <h3 id="nft-name"></h3>
+    </center>
+  </div>
+  <br><br>
+  <div style="margin-bottom: 10rem;">
+    <table>
+      <tr>
+        <th>
+          Description
+        </th>
+        <th>
+          Details
+        </th>
+      </tr>
+      <tr>
+        <td>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+          the industry's standard
+          dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+          to make a type specimen
+          book. It has survived not only five centuries, but also the leap into electronic typesetting,
+          remaining essentially
+          unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+          Ipsum passages, and more
+          recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+          Ipsum.
+        </td>
+        <td>
+          <center>
+            <div style="display: inline-flex; align-items: baseline;">
+              <img src="../images/ethereum.png" id="eth" />
+              <p style="font-size: 60px;">
+                0.12
+              </p>
+              <p style="font-size: 20px;">
+                ($196.99)
+              </p>
+            </div>
+            <br><br>
+            <input type="button" class="button" value="BUY NOW">
+          </center>
+        </td>
+      </tr>
+    </table>
 
-    </div>
+  </div>
 </body>
+<script>
+  const queryString = window.location.search;
+  const urlParams = new URLSearchParams(queryString);
+  const token_address = urlParams.get('token_address')
+  const token_id = urlParams.get('token_id')
+  var one_nft = {}
+  const getNft = async () => {
+    one_nft = {}
+    one_nft = await $.ajax(
+      "https://deep-index.moralis.io/api/v2/nft/" + token_address + "/" + token_id + "?chain=ropsten&format=decimal", {
+        type: 'get',
+        headers: {
+          'Accept': 'application/json',
+          'X-API-Key': 'AusQhcwVvbwSBi2oZFl5GjrlaV1HO5ron7huHPeLaxnc2HgKSpvEuSL1AgVa72SG'
+        },
+        success: function(data, status, xhr) {},
+        error: function(jqXhr, textStatus, errorMessage) {
+          alert("No applicant found")
+        }
+      })
+    const nft_img = document.querySelector('#nft-img')
+    nft_img.src = one_nft?.token_uri
+    nft_img.style.width = '200px'
+    nft_img.style.height = '200px'
+    nft_img.style.objectFit = 'cover'
+
+    const nft_name = document.querySelector('#nft-name')
+    nft_name.textContent = one_nft?.name
+  }
+  getNft()
+</script>
 
 </html>
