latest by aiffa

--- a/pages/userPage.html
+++ b/pages/userPage.html
@@ -44,7 +44,11 @@
     <br><br>
     <div class="flex-container" id="nft-list">
       <div class="grid-container">
-        <div class="grid-item item1"><img src="https://picsum.photos/200/300" /></div>
+        <div class="grid-item item1">
+          <img src="https://picsum.photos/200/300" /> <br>
+          <p class="title">Long Neckie Adira: <br> Silver 120 Anniversary Editiono</p>
+          <p class="price"><b>$196.99</b></p>
+        </div>
         <div class="grid-item item" style="margin-left: 30px;"><a href="itemPage.html"><input type="button" class="button" value="View"></a></div>
         <div class="grid-item item" style="margin-right: 30px;"><a href=""><input type="button" class="button" value="Buy"></a></div>
       </div>
