--- a/pages/userPage.html
+++ b/pages/userPage.html
@@ -43,7 +43,7 @@
     </div>
     <br><br>
     <div class="flex-container" id="nft-list">
-      <div class="grid-container">
+      <!-- <div class="grid-container">
         <div class="grid-item item1">
           <img src="https://picsum.photos/200/300" /> <br>
           <p class="title">Long Neckie Adira: <br> Silver 120 Anniversary Editiono</p>
@@ -51,7 +51,7 @@
         </div>
         <div class="grid-item item" style="margin-left: 30px;"><a href="itemPage.html"><input type="button" class="button" value="View"></a></div>
         <div class="grid-item item" style="margin-right: 30px;"><a href=""><input type="button" class="button" value="Buy"></a></div>
-      </div>
+      </div> -->
     </div>
 
   </div>
@@ -78,12 +78,24 @@
       const div_grid_container = document.createElement('div')
 
       const img = document.createElement('img')
+      const br1 = document.createElement('br')
+      const p_img = document.createElement('p')
+      const p_b_price = document.createElement('b')
+      const p_price = document.createElement('p')
       const div_img = document.createElement('div')
       img.src = nft?.token_uri
       img.style.width = '200px'
       img.style.height = '200px'
       img.style.objectFit = 'cover'
+      p_img.textContent = nft?.name
+      p_img.classList.add('title')
+      p_b_price.textContent = "$196.99"
+      p_price.appendChild(p_b_price)
+      p_price.classList.add('price')
       div_img.appendChild(img)
+      div_img.appendChild(br1)
+      div_img.appendChild(p_img)
+      div_img.appendChild(p_price)
       div_img.classList.add('grid-item')
       div_img.classList.add('item1')
 
