--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -39,8 +39,7 @@
                     1
                 </td>
                 <td>
-                    <a href="https://opensea.io/collection/black-future-collection-long-neckie-adira-by-nyla"
-                        id="nft">
+                    <a href="userPage.html" id="nft">
                         Black Future Collection: Long Neckie Adira by Nyla Hayes
                     </a>
                 </td>
