fix order status

--- a/pages/confirmation2Page.html
+++ b/pages/confirmation2Page.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     <center>
-        <h1 style="margin-top: 3rem;">Are you sure to proceed?</h1>
+        <h1 style="margin-top: 3rem;">Transaction Status</h1>
     </center>
     <div>
         <table style="margin-top: 3rem; width:70%">
@@ -67,7 +67,7 @@
             <button class="btn back-btn">Back</button>
         </a>
         <a href="../pages/process2Page.html">
-            <button class="btn next-btn">Next</button>
+            <button class="btn next-btn">Next Step</button>
         </a>
     </div>
 
