--- a/pages/confirmationPage.html
+++ b/pages/confirmationPage.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     <center>
-        <h1 style="margin-top: 3rem;">Are you sure to proceed?</h1>
+        <h1 style="margin-top: 3rem;">Transaction Status</h1>
     </center>
 
     <div>
@@ -51,9 +51,9 @@
                     <h3>Buyer</h3>
                     <center>
                         <ol class="progtrckr" data-progtrckr-steps="2">
-                            <li class="progtrckr-todo">Confirmation</li>
-                            <li class="progtrckr-todo">Processing</li>
-                            <li class="progtrckr-todo">Order Successful</li>
+                            <li class="progtrckr-todo4">Confirmation</li>
+                            <li class="progtrckr-todo5">Processing</li>
+                            <li class="progtrckr-todo6">Order Successful</li>
                         </ol>
                     </center>
                     <br>
