--- a/pages/processPage.html
+++ b/pages/processPage.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     <center>
-        <h1 style="margin-top: 3rem;">Please make sure your details correct.</h1>
+        <h1 style="margin-top: 3rem;">Transaction Status</h1>
     </center>
     <div>
         <table style="margin-top: 3rem; width:70%">
