--- a/pages/success2Page.html
+++ b/pages/success2Page.html
@@ -67,7 +67,7 @@
             <button class="btn back-btn">Back</button>
         </a>
         <a href="../pages/homePage.html">
-            <button class="btn next-btn">Next</button>
+            <button class="btn next-btn">Done</button>
         </a>
     </div>
 
